--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ h1{
 }
 .right-section{
     width: 25%;
-    position: absolute;
+    position: fixed;
     right: 10%;
     top: 35%;
     color: white;
@@ -56,7 +56,15 @@ button:hover{
     color: white;
     font-weight: bold;
 }
-.link-container{
-    width: 30px;
-}
 
+  .icons-container {
+    display: flex;
+    width: 3rem;
+    flex-direction: row;
+    position: absolute;
+    bottom: 50px;
+    right: 200px;
+}
+.youtube, .github,.linkedin{
+    margin-left: 10px;
+}
