--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+@media (min-width:1180px){  
 body{
     background-color: hsl(257, 40%, 49%);
     margin: 0px;
@@ -68,3 +70,159 @@ button:hover{
 .youtube, .github,.linkedin{
     margin-left: 10px;
 }
+.background-image-mobile{
+    display: none;
+}
+} 
+@media (max-width: 400px) {
+
+.background-image{
+    display: none;
+}
+.background-image-mobile{
+    width: 25rem;
+    
+    z-index: -1;
+    transform: rotate(-2deg);
+    top: 1px;
+
+}
+.picture{
+    width: 21rem;
+    position: absolute;
+    top: 60px;
+    z-index: 2px;
+    margin-left: 10px;
+}
+
+body{
+    margin: 0px;
+    background-color: hsl(257, 40%, 49%);
+    font-family: Open Sans;
+    color: white;
+}
+.logo{
+    position: fixed;
+    top: 40px;
+    width: 150px;
+    left: 20px;
+    
+}
+.icons-container {
+    display: flex;
+    width: 3rem;
+    flex-direction: row;
+    position: absolute;
+    bottom: 40px;
+    right: 220px;
+}
+.right-section{
+    position: fixed;
+    bottom: 130px;
+    text-align: center;
+    font-size: small;
+    width: 280px;
+    margin-left: 40px;
+    z-index: 1;
+}
+.attribution{
+    position: fixed;
+    bottom: 1px;
+    
+    color: white;
+    font-weight: bold;
+    width: 600px;
+}
+
+.youtube, .github,.linkedin{
+    margin-left: 10px;
+}
+button{
+    padding: 10px 60px;
+    border-radius: 20px;
+    border: none;
+    background-color: white;
+    color: hsl(257, 40%, 49%);
+    box-shadow: 4px 4px 4px 1px rgba(0, 0, 0, .15);
+    cursor: pointer;
+
+}
+button:hover{
+    color: white;
+    background-color: hsl(300, 69%, 71%);
+    transition: .15s;
+}
+}
+@media (max-width: 1179px)  {
+    .background-image-mobile{
+        display: none;
+    }
+    
+    .background-image{
+        display: none;
+    
+    }
+    .picture{
+        width: 50rem;
+        margin: auto;
+    
+    }
+    
+    body{
+        margin: 0px;
+        background-color: hsl(257, 40%, 49%);
+        font-family: Open Sans;
+        color: white;
+        height: 1000px;
+    }
+    .logo{
+       
+        top: 40px;
+        width: 200px;
+        left: 20px;
+        
+    }
+    .icons-container {
+        display: flex;
+        width: 3rem;
+        flex-direction: row;
+        margin-left: 50rem;
+        margin-top: 8rem;
+    }
+    .right-section{
+      
+        
+        text-align: center;
+        
+        
+        left: 5%;
+    }
+    .attribution{
+        position: fixed;
+        bottom: 1px;
+        
+        color: white;
+        font-weight: bold;
+        width: 600px;
+    }
+    
+    .youtube, .github,.linkedin{
+        margin-left: 10px;
+    }
+    button{
+        padding: 10px 60px;
+        border-radius: 20px;
+        border: none;
+        background-color: white;
+        color: hsl(257, 40%, 49%);
+        box-shadow: 4px 4px 4px 1px rgba(0, 0, 0, .15);
+        cursor: pointer;
+    
+    }
+    button:hover{
+        color: white;
+        background-color: hsl(300, 69%, 71%);
+        transition: .15s;
+    }
+    }
+
